test/classes/initializers/records/returnArg3.good
returnArg3.chpl:4: In initializer:
returnArg3.chpl:5: error: type mismatch in assignment from Foo to int(64)
returnArg3.chpl:1: note: Function 'init' is being treated as a copy initializer for type 'Foo', was that intended?
returnArg3.chpl:1: note: If not, try explicitly declaring the type of the generic argument,
returnArg3.chpl:1: note: or excluding 'Foo' as its type via a where clause
